// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Role creation should fail when canReadAllObjectRecords is false but canDestroyAllObjectRecords is true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Destroy Role",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "role",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 role",
    "summary": {
      "role": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when canReadAllObjectRecords is false but canSoftDeleteAllObjectRecords is true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Soft Delete Role",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "role",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 role",
    "summary": {
      "role": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when canReadAllObjectRecords is false but canUpdateAllObjectRecords is true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Update Role",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "role",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 role",
    "summary": {
      "role": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when canReadAllObjectRecords is false but multiple write permissions are true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Multiple Write Role",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "role",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 role",
    "summary": {
      "role": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when label already exists 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "role": [
        {
          "errors": [
            {
              "code": "ROLE_LABEL_ALREADY_EXISTS",
              "message": "A role with this label already exists",
              "userFriendlyMessage": "A role with this label already exists.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Existing Test Role",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "role",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 role",
    "summary": {
      "role": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when label is missing 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Field "label" of required type "String!" was not provided.",
  "name": "GraphQLError",
}
`;
